--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #38bdf8;
+    color: #7dd3fc;
 }
 
 /* ===== SECTIONS ===== */
@@ -56,6 +56,7 @@ section h1 {
 }
 
 section p {
+    color: #e5e7eb;
     max-width: 750px;
     line-height: 1.6;
 }
