--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Basic reset */
+/* Basic Reset */
 * {
     margin: 0;
     padding: 0;
@@ -6,10 +6,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Body style */
+/* Body */
 body {
     background-color: #1b1b2b;
     color: #ffffff;
+    text-align: center;
 }
 
 /* Header */
@@ -52,6 +53,11 @@ section {
     min-height: 100vh;
     padding: 60px 40px;
     background-color: #1f1f33;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Headings */
@@ -63,14 +69,6 @@ section h1 {
 section p {
     max-width: 750px;
     line-height: 1.6;
-}
-
-/* Home center alignment */
-#home {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 /* Video */
@@ -87,7 +85,6 @@ video {
 /* Footer */
 footer {
     background-color: #141427;
-    text-align: center;
     padding: 15px;
     font-size: 14px;
 }
